heroku deploy changes

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
+    "build:www": "rm -rf www && ionic-app-scripts build -aot --prod && cp src/package.json www/ && cp src/server.js www/",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
