--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
+    "test": "ng test",
     "build:www": "rm -rf www && ionic-app-scripts build -aot --prod && cp src/package.json www/ && cp src/server.js www/",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
@@ -34,8 +35,22 @@
     "zone.js": "0.8.11"
   },
   "devDependencies": {
+    "@angular/cli": "^1.1.3",
     "@ionic/app-scripts": "1.3.7",
     "@ionic/cli-plugin-ionic-angular": "1.3.1",
+    "@types/jasmine": "^2.5.52",
+    "@types/node": "^8.0.1",
+    "codecov": "^2.2.0",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-remap-istanbul": "^0.6.0",
+    "ts-node": "^3.1.0",
+    "tslint": "^5.4.3",
+    "tslint-eslint-rules": "^4.1.1",
     "typescript": "2.3.3"
   },
   "description": "An Ionic project"
