--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/http": "4.1.2",
         "@angular/platform-browser": "4.1.2",
         "@angular/platform-browser-dynamic": "4.1.2",
+        "@ionic-native/browser-tab": "^3.13.0",
         "@ionic-native/core": "3.10.2",
         "@ionic-native/firebase-analytics": "^3.13.0",
         "@ionic-native/splash-screen": "3.10.2",
@@ -29,14 +30,18 @@
         "@ionic/storage": "2.0.1",
         "angularfire2": "^4.0.0-rc.1",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-browsertab": "^0.2.0",
+        "cordova-plugin-buildinfo": "^1.1.0",
+        "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-firebase-analytics": "^0.10.1",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "cordova-universal-links-plugin": "^1.2.1",
-        "firebase": "^4.1.2",
+        "firebase": "^4.1.3",
         "ionic-angular": "3.3.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -74,7 +79,10 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-firebase-analytics": {},
-            "cordova-universal-links-plugin": {}
+            "cordova-universal-links-plugin": {},
+            "cordova-plugin-buildinfo": {},
+            "cordova-plugin-browsertab": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android"
