--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
     "cors": "^2.8.0",
     "method-override": "^2.3.6",
     "traitify": "^2.1.0",
-    "typescript-require":"^0.2.9-1"
+    "typescript-require": "^0.2.9-1"
   },
   "devDependencies": {
+    "nodemon": "^1.12.1",
     "typescript": "2.0.9"
   },
   "description": "Engage"
