--- a/mobile/www/package.json
+++ b/mobile/www/package.json
@@ -7,12 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.15.2",
-    "body-parser": "^1.15.2",
-    "cors": "^2.8.0",
-    "method-override": "^2.3.6",
-    "traitify": "^2.1.0",
-    "typescript-require":"^0.2.9-1"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.0.0",
